load("//rules_thrift:defs.bzl", "thrift_library")

thrift_library(
    name = "shared",
    src = "shared.thrift",
    gen = "cpp",
)

cc_library(
    name = "shared_thrift",
    srcs = glob(["shared_gen_cpp/**"]),
)

thrift_library(
    name = "tutorial",
    src = "tutorial.thrift",
    gen = "cpp",
)

cc_library(
    name = "tutorial_thrift",
    srcs = glob(["tutorial_gen_cpp/**"]),
)
