load("//rules_thrift:defs.bzl", "thrift_library")

thrift_library(
    name = "shared",
    src = "shared.thrift",
    gen = "cpp",
)

thrift_library(
    name = "tutorial",
    src = "tutorial.thrift",
    gen = "cpp",
)

cc_binary(
    name = "server",
    srcs = [
        "server.cc",
        ":shared",
        ":tutorial",
    ],
    deps = [
        "//thrift-0.13.0/lib/cpp:thrift",
    ],
)
