load("//rules_flex:defs.bzl", "flex_library")
load("//rules_bison:defs.bzl", "bison_library")

SOURCE_FILES = [
    "src/thrift/audit/t_audit.cpp",
    "src/thrift/audit/t_audit.h",
    "src/thrift/common.cc",
    "src/thrift/common.h",
    "src/thrift/generate/t_generator.cc",
    "src/thrift/generate/t_generator.h",
    "src/thrift/generate/t_generator_registry.h",
    "src/thrift/generate/t_html_generator.h",
    "src/thrift/generate/t_oop_generator.h",
    "src/thrift/globals.h",
    "src/thrift/logging.h",
    "src/thrift/main.cc",
    "src/thrift/main.h",
    "src/thrift/parse/parse.cc",
    "src/thrift/parse/t_base_type.h",
    "src/thrift/parse/t_const.h",
    "src/thrift/parse/t_const_value.h",
    "src/thrift/parse/t_container.h",
    "src/thrift/parse/t_doc.h",
    "src/thrift/parse/t_enum.h",
    "src/thrift/parse/t_enum_value.h",
    "src/thrift/parse/t_field.h",
    "src/thrift/parse/t_function.h",
    "src/thrift/parse/t_list.h",
    "src/thrift/parse/t_map.h",
    "src/thrift/parse/t_program.h",
    "src/thrift/parse/t_scope.h",
    "src/thrift/parse/t_service.h",
    "src/thrift/parse/t_set.h",
    "src/thrift/parse/t_struct.h",
    "src/thrift/parse/t_type.h",
    "src/thrift/parse/t_typedef.cc",
    "src/thrift/parse/t_typedef.h",
    "src/thrift/platform.h",
    "src/thrift/generate/t_cpp_generator.cc",
]

flex_library(
    name = "thriftl",
    src = "src/thrift/thriftl.ll",
    out = "src/thrift/thriftl.cc",
)

bison_library(
    name = "thrifty",
    src = "src/thrift/thrifty.yy",
    out = "src/thrift/thrifty.cc",
    gen_posix_header = True,
)

cc_binary(
    name = "thrift",
    srcs = SOURCE_FILES + [
        "src/thrift/version.h",
        ":thriftl",
        ":thrifty",
    ],
    includes = ["src"],
    visibility = ["//visibility:public"],
)
